---
source: compiler-core/src/parse/tests.rs
expression: "\nfn main() {\n    case [1, 2, 3] {\n        [1, 2, *] -> 0\n        _ -> 0\n    }\n}\n"
---
error: Syntax error
  ┌─ /src/parse/error.gleam:4:16
  │
4 │         [1, 2, *] -> 0
  │                ^ I was not expecting this

Expected one of: 
"]"
a pattern
